compiler/testData/diagnostics/tests/typeParameters/typeParameterChainInReceiver.kt
// FIR_IDENTICAL
// ISSUE: KT-56212
fun <F> F.<!UNRESOLVED_REFERENCE!>X<!>.f(): Boolean = false
